import { shallow } from "enzyme";
import React from "react";
import { describe, expect, it, vi } from "vitest";
import { InputSearch } from "../../../base";
import { OTUToolbar } from "../OTUToolbar";

describe("<OTUToolbar />", () => {
    const props = {
        canModify: true,
        page: 2,
        refId: "baz",
        term: "foo",
        verified: false,
        onFind: vi.fn(),
    };

    it("should render", () => {
        const wrapper = shallow(<OTUToolbar {...props} />);
        expect(wrapper).toMatchSnapshot();
    });

    it("should render when [verified=true]", () => {
        props.verified = true;
        const wrapper = shallow(<OTUToolbar {...props} />);
        expect(wrapper).toMatchSnapshot();
    });

    it("should call onFind() when input changes", () => {
        const wrapper = shallow(<OTUToolbar {...props} />);
        const e = { target: { value: "baz" } };
        wrapper.find(InputSearch).simulate("change", e);
        expect(props.onFind).toHaveBeenCalledWith(
            props.refId,
            "baz",
            props.verified,
            1,
        );
    });

    it("should call onFind() when filter button is clicked", () => {
        const wrapper = shallow(<OTUToolbar {...props} />);
        wrapper.find("#verified-button").simulate("click");
        expect(props.onFind).toHaveBeenCalledWith(
            props.refId,
            props.term,
            !props.verified,
            1,
        );
    });
});
